# HelloWord-Keyboard

./: .gitignore  DEV_GUIDE.md
.github/workflows/: build-firmware.yml
2.Firmware/HelloWord-Dynamic-fw/BSP/eink/: eink_290_bw.h
2.Firmware/HelloWord-Dynamic-fw/Core/Src/: main.c  stm32f4xx_it.c
2.Firmware/HelloWord-Dynamic-fw/Platform/Communication/: interface_uart.cpp  interface_usb.cpp
2.Firmware/HelloWord-Dynamic-fw/UserApp/: freertos_inc.h  main.cpp
2.Firmware/HelloWord-Dynamic-fw/UserApp/app/: app_interface.h  app_manager.cpp  app_manager.h
2.Firmware/HelloWord-Dynamic-fw/UserApp/comm/: config_cache.cpp  config_cache.h  config_params.h  device_log.cpp  device_log.h  hub_uart_comm.cpp  hub_uart_comm.h  hub_usb_bridge.cpp  hub_usb_comm.cpp  hub_usb_comm.h  protocol.h  ring_buffer.h  slip.cpp  slip.h
2.Firmware/HelloWord-Dynamic-fw/UserApp/config/: hub_config.cpp  hub_config.h  profile_store.cpp  profile_store.h
2.Firmware/HelloWord-Dynamic-fw/UserApp/display/: display_manager.cpp  display_manager.h  eink_canvas.cpp  eink_canvas.h  eink_driver.cpp  eink_driver.h  oled_display.cpp  oled_display.h
2.Firmware/HelloWord-Dynamic-fw/UserApp/input/: button_detector.cpp  button_detector.h  input_manager.cpp  input_manager.h
2.Firmware/HelloWord-Dynamic-fw/UserApp/power/: power_manager.cpp  (+1 more)
2.Firmware/HelloWord-Keyboard-bootloader/: CMakeLists.txt  STM32F103CBTx_BOOTLOADER.ld  bootloader.c  usb_dfu.c  usb_dfu.h  usb_hid.c  usb_hid.h
2.Firmware/HelloWord-Keyboard-fw/HelloWord/: hw_keyboard.cpp  hw_keyboard.h
2.Firmware/HelloWord-Keyboard-fw/UserApp/: common_inc.h  configurations.h  main.cpp
3.Software/: flash_firmware.py  reset_to_dfu.py
3.Software/pc-app/: index.html  package.json  tailwind.config.js
3.Software/pc-app/src/: App.tsx
3.Software/pc-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
3.Software/pc-app/src-tauri/src/: device_log.rs  lib.rs  logging.rs  main.rs  settings.rs  state.rs  tray.rs
3.Software/pc-app/src-tauri/src/commands/: config_commands.rs  data_commands.rs  device_commands.rs  dfu_commands.rs  eink_commands.rs  log_commands.rs  mod.rs  profile_commands.rs  rgb_commands.rs  settings_commands.rs
3.Software/pc-app/src-tauri/src/config/: config_service.rs  mod.rs  param_registry.rs
3.Software/pc-app/src-tauri/src/data/: data_engine.rs  mod.rs
3.Software/pc-app/src-tauri/src/data/providers/: system_stats.rs
3.Software/pc-app/src-tauri/src/device/: bootloader_device.rs  device_manager.rs  hub_device.rs  keyboard_device.rs  mod.rs  protocol.rs
3.Software/pc-app/src-tauri/src/dfu/: dfu_service.rs  mod.rs
3.Software/pc-app/src-tauri/src/eink/: dither.rs  eink_pipeline.rs  mod.rs
3.Software/pc-app/src-tauri/src/profile/: mod.rs  profile_service.rs
3.Software/pc-app/src-tauri/src/rgb/: color_utils.rs  mod.rs  rgb_engine.rs
(+74 files in other folders)
