[package]
name = "helloword-manager"
version = "1.0.0"
edition = "2021"

[lib]
name = "helloword_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
image = { version = "0.25", default-features = false, features = ["png", "ico"] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hidapi = "2"
serialport = "4"
sysinfo = "0.31"
image = "0.25"
log = "0.4"
env_logger = "0.11"
thiserror = "1"
dirs = "5"
